Services/deployment/channel/retail/templates/transfer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helm-transfers-ms-base
  namespace: banking
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: helm-transfers
    app.kubernetes.io/name: ms-base
